--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@ body {
     font-weight: bold;
     text-align: center;
     color: darkgoldenrod;
+    touch-action: manipulation;
 }
 
 h1 {
@@ -45,7 +46,7 @@ button {
 
 .counter-app {
     max-width: 250px;
-    margin: 30px auto 0;
+    margin: 25dvh auto;
     border: 2px solid;
     padding: 10px 40px;
     border-radius: 10px;
